--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -16,22 +16,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.61">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="239dp">
 
-            <ImageView
+           <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageProfile"
-                android:layout_width="0dp"
-                android:layout_height="240dp"
-                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:clickable="true"
-                android:cropToPadding="true"
                 android:focusable="auto"
                 android:src="@drawable/ic_menu_gallery"
-                app:srcCompat="@mipmap/ic_launcher_round"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="3dp"
                 tools:ignore="SpeakableTextPresentCheck" />
 
         </LinearLayout>
