--- a/app/src/main/res/layout/nav_header_landing_page.xml
+++ b/app/src/main/res/layout/nav_header_landing_page.xml
@@ -13,14 +13,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
-        android:layout_width="74dp"
-        android:layout_height="80dp"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round"
-        tools:srcCompat="@mipmap/profilepic" />
+        android:src="@drawable/defultprofile"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="1dp"/>
 
     <TextView
         android:id="@+id/nameofuser"
