--- a/app/src/main/res/layout/fragment_selling_profile.xml
+++ b/app/src/main/res/layout/fragment_selling_profile.xml
@@ -4,38 +4,178 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.sellingProfile.SellingProfileFragment"
-    >
+    tools:context=".ui.sellingProfile.SellingProfileFragment">
 
-    <TextView
-        android:id="@+id/textGallery"
-        android:layout_width="181dp"
-        android:layout_height="14dp"
-        android:text="@string/selling_view"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="383dp"
+        android:layout_height="601dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.384" />
+        app:layout_constraintVertical_bias="0.0">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingAddActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTintMode="add"
-        android:clickable="true"
-        android:src="@android:drawable/ic_input_add"
-        app:borderWidth="0.1dp"
-        app:fabCustomSize="45dp"
-        app:fabSize="auto"
-        app:hoveredFocusedTranslationZ="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.884"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.961"
-        app:pressedTranslationZ="10dp"
-        android:contentDescription="floating Button"
-        tools:src="@android:drawable/ic_input_add" />
+        <TextView
+            android:id="@+id/textGallery"
+            android:layout_width="321dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-black"
+            android:text="@string/my_ad"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingAddActionButton"
+            android:layout_width="70dp"
+            android:layout_height="73dp"
+            android:layout_marginBottom="4dp"
+            android:backgroundTintMode="src_in"
+            android:clickable="true"
+            android:contentDescription="floating Button"
+            android:contextClickable="false"
+            android:cropToPadding="true"
+            android:focusable="auto"
+            android:foreground="@drawable/blueaddbutton"
+            android:foregroundGravity="center|fill"
+            app:backgroundTint="#2196F3"
+            app:backgroundTintMode="src_in"
+            app:borderWidth="0.1dp"
+            app:fabCustomSize="45dp"
+            app:fabSize="auto"
+            app:hoveredFocusedTranslationZ="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.948"
+            app:layout_constraintStart_toStartOf="parent"
+            app:pressedTranslationZ="10dp"
+            tools:ignore="RedundantDescriptionCheck" />
+
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView"
+            android:layout_width="wrap_content"
+            android:layout_height="269dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textGallery"
+            tools:ignore="SpeakableTextPresentCheck">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/carview"
+                    android:layout_width="377dp"
+                    android:layout_height="269dp"
+                    android:src="@drawable/ic_menu_slideshow" />
+
+                <ImageView
+                    android:id="@+id/carview1"
+                    android:layout_width="377dp"
+                    android:layout_height="269dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_menu_gallery" />
+
+                <ImageView
+                    android:id="@+id/carview2"
+                    android:layout_width="377dp"
+                    android:layout_height="269dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_menu_gallery" />
+
+                <ImageView
+                    android:id="@+id/carview3"
+                    android:layout_width="377dp"
+                    android:layout_height="269dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_menu_gallery" />
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="380dp"
+            android:layout_height="214dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">
+
+            <TextView
+                android:id="@+id/modelView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/fueltype"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/millage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/finance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="1dp"
+                    android:layout_height="21dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/like" />
+
+                <TextView
+                    android:id="@+id/like"
+                    android:layout_width="306dp"
+                    android:layout_height="21dp"
+                    android:layout_weight="1"
+                    android:text="no likes now" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="221dp"
+            android:layout_height="49dp"
+            android:text="Edit Ad"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/floatingAddActionButton"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
