--- a/app/src/main/res/layout/fragment_selling_profile.xml
+++ b/app/src/main/res/layout/fragment_selling_profile.xml
@@ -16,17 +16,18 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textGallery"
-            android:layout_width="321dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="16dp"
+            android:id="@+id/textView"
+            android:layout_width="184dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="4dp"
             android:fontFamily="sans-serif-black"
-            android:text="@string/my_ad"
+            android:text="My Ad"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textSize="16sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.552"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,9 +61,10 @@
             android:id="@+id/horizontalScrollView"
             android:layout_width="wrap_content"
             android:layout_height="269dp"
+            android:layout_marginTop="2dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textGallery"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:ignore="SpeakableTextPresentCheck">
 
             <LinearLayout
@@ -98,73 +100,79 @@
             </LinearLayout>
         </HorizontalScrollView>
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="380dp"
-            android:layout_height="214dp"
-            android:orientation="vertical"
+        <ScrollView
+            android:layout_width="379dp"
+            android:layout_height="236dp"
             app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">
-
-            <TextView
-                android:id="@+id/modelView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/year"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/fueltype"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/millage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/price"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/finance"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
+            app:layout_constraintVertical_bias="1.0">
 
             <LinearLayout
+                android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView9"
-                    android:layout_width="1dp"
-                    android:layout_height="21dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/like" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/like"
-                    android:layout_width="306dp"
-                    android:layout_height="21dp"
-                    android:layout_weight="1"
-                    android:text="no likes now" />
-            </LinearLayout>
+                    android:id="@+id/modelView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/year"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/fueltype"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/millage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/finance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView9"
+                        android:layout_width="1dp"
+                        android:layout_height="21dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/like" />
+
+                    <TextView
+                        android:id="@+id/like"
+                        android:layout_width="306dp"
+                        android:layout_height="21dp"
+                        android:layout_weight="1"
+                        android:text="no likes now" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
 
         <Button
             android:id="@+id/button"
