--- a/app/src/main/res/layout/fragment_selling_profile.xml
+++ b/app/src/main/res/layout/fragment_selling_profile.xml
@@ -168,7 +168,7 @@
                         android:layout_width="306dp"
                         android:layout_height="21dp"
                         android:layout_weight="1"
-                        android:text="no likes now" />
+                        android:text="no likes yet" />
                 </LinearLayout>
 
             </LinearLayout>
